Hided the white line in the bottom of the temporal coverage page. The line is caused by the date picker and disappers when a user pick the date. See cmn 93 of issue 878. This issue doen't appear on Firefox, though.

--- a/gbif-ipt/src/main/webapp/styles/main.css
+++ b/gbif-ipt/src/main/webapp/styles/main.css
@@ -728,6 +728,9 @@ div.tempo div.right {
   margin-top: 10px;
   margin-bottom: -25px;
 }
+
+#ui-datepicker-div { display: none; }
+
 div#qualitycontrol {
   margin-bottom: 35px;
 }
